--- a/About.html
+++ b/About.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
     <h1>About</h1>
+    <div class="hov">
+
+    </div>
 
     <div>
         <a href="mainpage.html">HomePage</a>
