--- a/Photography Examples.html
+++ b/Photography Examples.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
@@ -18,7 +19,7 @@
 
 <h2>Steps to Take Photos Like These</h2>
 <ol>
-    <li>Get a Camera</li>
+    <li id="large-paragraph">Get a Camera</li>
     <li>Go Outside</li>
     <li>Take Photo</li>
     <li>Edit Photo</li>
